2006-08-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-graphml.c (igraph_read_graph_graphml) : remove
	'directed' attribute, (somewhat) better error handling, memory leaks
	corrected

	* src/iterators.c (igraph_vs_nonadj) : added
	(igraph_vs_destroy, igraph_vit_create) : added NONADJ type
	* examples/simple/igraph_vs_nonadj.c : added
	
2006-08-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_graphml, igraph_write_graph_graphml)
	: moved to src/foreign-graphml.c

	* src/foreign-graphml.c (igraph_read_graph_graphml) : added
	attribute handling, quite messy and contains known memory leaks

2006-08-02  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/conversion.c (igraph_to_directed) : 
	IGRAPH_TO_UNDIRECTED_COLLAPSE bug corrected
	* examples/simple/igraph_to_undirected.c : added

2006-07-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_write_graph_pajek) : bug corrected

2006-07-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/conversion.c (igraph_to_directed, igraph_to_undirected) : added

2006-07-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/iterators.c (igraph_ess_1) : type bug corrected

	* src/foreign.c (igraph_write_graph_pajek) : added
	* examples/simple/igraph_write_graph_pajek.c : added

2006-07-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/type_indexededgelist.c (igraph_get_eids) : added

	* src/iterators.c (igraph_es_multipairs, igraph_i_eit_multipairs) :
	added
	(igraph_es_destroy, igraph_eit_create) : added MULTIPAIRS
	
	* src/structural_properties.c (igraph_simplify) : several bugs 
	eliminated, updated to use MULTIPAIRS
	* examples/simple/igraph_simplify.c : added

2006-07-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/operators.c (igraph_union_many) : free bug corrected

	* src/operators.c (igraph_disjoint_union, igraph_disjoint_union_many)
	(igraph_union, igraph_union_many, igraph_intersection)
	(igraph_intersection_many, igraph_difference, igraph_complementer)