@@ -138,9 +138,6 @@ PyObject* igraphmodule_VertexSeq_sq_item(igraphmodule_VertexSeqObject* self,
  * \brief Returns the list of attribute names
  */
 PyObject* igraphmodule_VertexSeq_attributes(igraphmodule_VertexSeqObject* self) {
-  igraph_vector_t t;
-  igraph_vector_ptr_t ns;
-  long result;
   igraphmodule_GraphObject *o;
   
   o=(igraphmodule_GraphObject*)igraphmodule_resolve_graph_weakref(self->gref);
